<resources>
    <string name="app_name">Firestore</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="register"> Register</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="email">E-mail</string>
    <string name="create_acc">Create an account</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="by_clicking_register">By clicking <b>Register</b> you confirm that you accept our <u> terms and conditions </u>.</string>
    <string name="have_account">Already have an account?</string>
    <string name="required_field">Field must not be empty</string>
    <string name="provide_valid_email">Provide a valid e-mail adress</string>
    <string name="password_length">Password must have at least 8 characters</string>
    <string name="check_password">Passwords are not the same</string>
    <string name="too_short">Must be at least 2 characters</string>
    <string name="fill_all_fields">Fill out all fields</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="invalid_login_or_passord">Either e-mail or password are incorrect</string>
    <string name="hello">Hello</string>
</resources>