<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#fff"
    tools:context=".fragments.RegisterFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="32dp"
        android:text="@string/create_acc"
        android:textSize="@dimen/title_text_size"
        android:textAlignment="center"
        android:fontFamily="@font/open_sans_regular"
        android:textColor="@color/grey"
        android:textStyle="bold"
        android:id="@+id/register_title_tv"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/LoginTextInputLayoutStyle"
        app:layout_constraintTop_toBottomOf="@+id/register_title_tv"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp"
        android:hint="@string/first_name"
        android:textColorHint="@color/grey"
        android:id="@+id/first_name_box"
        app:hintEnabled="true"
        app:errorEnabled="true"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/first_name_et"
            android:textColor="@color/black"
            android:fontFamily="@font/open_sans_regular"
            android:inputType="textCapWords"

            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/LoginTextInputLayoutStyle"
        app:layout_constraintTop_toBottomOf="@+id/first_name_box"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp"
        android:hint="@string/last_name"
        android:textColorHint="@color/grey"
        android:id="@+id/last_name_box"
        app:hintEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/last_name_et"
            android:textColor="@color/black"
            android:fontFamily="@font/open_sans_regular"
            android:inputType="textCapWords"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/LoginTextInputLayoutStyle"
        app:layout_constraintTop_toBottomOf="@+id/last_name_box"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp"
        android:hint="@string/email"
        android:textColorHint="@color/grey"
        android:id="@+id/email_box"
        app:hintEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email_et"
            android:textColor="@color/black"
            android:fontFamily="@font/open_sans_regular"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/LoginTextInputLayoutStyle"
        app:layout_constraintTop_toBottomOf="@+id/email_box"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp"
        android:hint="@string/password"
        android:textColorHint="@color/grey"
        android:id="@+id/password_box"
        app:hintEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password_et"
            android:textColor="@color/black"
            android:fontFamily="@font/open_sans_regular"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/LoginTextInputLayoutStyle"
        app:layout_constraintTop_toBottomOf="@+id/password_box"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp"
        android:hint="@string/confirm_password"
        android:textColorHint="@color/grey"
        android:id="@+id/confirm_password_box"
        app:hintEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/confirm_password_et"
            android:textColor="@color/black"
            android:fontFamily="@font/open_sans_regular"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/by_clicking_register"
        android:fontFamily="@font/open_sans_regular"
        android:textSize="@dimen/small_font_1"
        android:textColor="@color/light_grey"
        android:id="@+id/terms_and_cond_tv"
        android:layout_margin="16dp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/confirm_password_box"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/register"
        android:textColor="#fff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/terms_and_cond_tv"
        android:id="@+id/register_button"
        android:background="@drawable/button_bg"/>

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_button">

        <TextView
            android:id="@+id/dont_have_acc_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/open_sans_regular"
            android:text="@string/have_account"
            android:textColor="@color/light_grey"
            android:textSize="@dimen/small_font_1" />

        <TextView
            android:id="@+id/login_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_regular"
            android:text="@string/login"
            android:textColor="@color/grey"
            android:textSize="@dimen/small_font_1"
            android:textStyle="bold" />
    </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/linear" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>